// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "ContractMetadataOuterClass";
option java_package = "com.daml.ledger.api.v1";
option csharp_namespace = "Com.Daml.Ledger.Api.V1";

// Contract-related metadata used in DisclosedContract (that can be included in command submission)
// or forwarded as part of the CreatedEvent in Active Contract Set or Transaction streams.
message ContractMetadata {
  // Ledger effective time of the transaction that created the contract.
  // Required
  google.protobuf.Timestamp created_at = 1;

  // Hash of the contract key if defined.
  // Optional
  bytes contract_key_hash = 2;

  // Driver-specific metadata. This is opaque and cannot be decoded.
  // Optional
  bytes driver_metadata = 3;
}

